# MVPTASIA

./: .gitignore  app.py  main.py  pyproject.toml
_pages/: tasacion.py  tendencias.py
pages/: tasacion.py
